force-app/main/default/objects/HelpTopicTemplate__c/HelpTopicTemplate__c.object-meta.xml
<CustomObject>
    <description>Layout control for Help Topic display in Callouts and Help Tools page - and Printable view</description>
    <label>Help Topic Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Help Topic Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>