force-app/main/default/objects/HelpTopicTemplate__c/fields/DefaultHeight__c.field-meta.xml
<CustomField>
    <fullName>DefaultHeight__c</fullName>
    <inlineHelpText>Set the Default Height of this Template in pixels</inlineHelpText>
    <label>Default Height</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>