force-app/main/default/objects/HelpTopicTemplate__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A brief description of the purpose and layout of this Help Topic Template</description>
    <inlineHelpText>A brief description of the purpose and layout of this Help Topic Template</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>