force-app/main/default/objects/HelpTopicTemplate__c/fields/PageURL__c.field-meta.xml
<CustomField>
    <fullName>PageURL__c</fullName>
    <description>The name of the Visual Force page described by this Help Topic Template</description>
    <inlineHelpText>The name of the Visual Force page described by this Help Topic Template</inlineHelpText>
    <label>Page URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>