force-app/main/default/objects/HelpTopicTemplate__c/fields/TemplateType__c.field-meta.xml
<CustomField>
    <fullName>TemplateType__c</fullName>
    <inlineHelpText>Describes the purpose and usage of this Help Template</inlineHelpText>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Callout</fullName>
            </value>
            <value>
                <fullName>Full Topic</fullName>
            </value>
            <value>
                <fullName>Lightning Viewer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>