force-app/main/default/objects/HelpTopicTemplate__c/listViews/Callouts.listView-meta.xml
<ListView>
    <fullName>Callouts</fullName>
    <columns>NAME</columns>
    <columns>TemplateType__c</columns>
    <columns>PageURL__c</columns>
    <columns>Description__c</columns>
    <columns>DefaultHeight__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TemplateType__c</field>
        <operation>equals</operation>
        <value>Callout</value>
    </filters>
    <label>Callouts</label>
</ListView>