force-app/main/default/objects/HelpTopicTemplate__c/listViews/Classic_Portal_Templates.listView-meta.xml
<ListView>
    <fullName>Classic_Portal_Templates</fullName>
    <columns>NAME</columns>
    <columns>TemplateType__c</columns>
    <columns>PageURL__c</columns>
    <columns>Description__c</columns>
    <columns>DefaultHeight__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TemplateType__c</field>
        <operation>equals</operation>
        <value>Full Topic</value>
    </filters>
    <label>Full Topic Templates</label>
</ListView>