force-app/main/default/objects/HelpTopicTemplate__c/listViews/Lightning_Viewer_Templates.listView-meta.xml
<ListView>
    <fullName>Lightning_Viewer_Templates</fullName>
    <columns>NAME</columns>
    <columns>TemplateType__c</columns>
    <columns>PageURL__c</columns>
    <columns>Description__c</columns>
    <columns>DefaultHeight__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TemplateType__c</field>
        <operation>equals</operation>
        <value>Lightning Viewer</value>
    </filters>
    <label>Lightning Viewer Templates</label>
</ListView>