force-app/main/default/objects/HelpTopicTemplate__c/listViews/Local_Custom_Templates.listView-meta.xml
<ListView>
    <fullName>Local_Custom_Templates</fullName>
    <columns>NAME</columns>
    <columns>TemplateType__c</columns>
    <columns>PageURL__c</columns>
    <columns>Description__c</columns>
    <columns>DefaultHeight__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PageURL__c</field>
        <operation>startsWith</operation>
        <value>c.</value>
    </filters>
    <label>Local Custom Templates</label>
</ListView>