force-app/main/default/objects/HelpTopicTemplate__c/listViews/Templates_pages.listView-meta.xml
<ListView>
    <fullName>Templates_pages</fullName>
    <columns>NAME</columns>
    <columns>TemplateType__c</columns>
    <columns>PageURL__c</columns>
    <columns>Description__c</columns>
    <columns>DefaultHeight__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Templates</label>
</ListView>